[gd_scene load_steps=17 format=2]

[ext_resource path="res://main/main.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Bungee-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/img/ui_button.png" type="Texture" id=3]
[ext_resource path="res://assets/img/star_backgournd.png" type="Texture" id=4]
[ext_resource path="res://assets/img/point_outilne.png" type="Texture" id=5]
[ext_resource path="res://assets/audio/sound_get.wav" type="AudioStream" id=6]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.688742 )
colors = PoolColorArray( 0.568627, 0.376471, 0.992157, 1, 0.4, 0.501961, 1, 1 )

[sub_resource type="Animation" id=2]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.9 ),
"transitions": PoolRealArray( 0.406126, 4, 1 ),
"update": 0,
"values": [ Color( 0.709804, 0.843137, 0.968627, 0 ), Color( 0.709804, 0.843137, 0.968627, 1 ), Color( 0.709804, 0.843137, 0.968627, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("timer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 9.51365, 1 ),
"update": 0,
"values": [ Color( 0.709804, 0.843137, 0.968627, 0 ), Color( 0.709804, 0.843137, 0.968627, 1 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 60
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 100
outline_color = Color( 0.160784, 0.105882, 0.298039, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 40
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=6]
resource_name = "oui"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("../..:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 0.297302, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../..:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../../timer/time_left:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 0.307786, 0.420448 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=7]
size = 110
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=8]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 0.233258, 2.63902, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.07822, 1.07822 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "begining"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 2.07053, 1 ),
"update": 0,
"values": [ Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "get"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 0.406126, 2.2974, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.99, 0.99 ), Vector2( 1, 1 ) ]
}

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 4 )

[node name="mouse" type="Node2D" parent="."]

[node name="Line2D" type="Line2D" parent="mouse"]
points = PoolVector2Array( 0, 0, 0, 0 )
gradient = SubResource( 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="RayCast2D" type="RayCast2D" parent="mouse"]
collide_with_areas = true
collide_with_bodies = false

[node name="point_container" type="Node2D" parent="."]

[node name="point_spwan_shape" type="Control" parent="."]
margin_left = 103.0
margin_top = 163.0
margin_right = 929.0
margin_bottom = 539.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="begining_timer" type="Timer" parent="."]
one_shot = true

[node name="end_timer" type="Timer" parent="."]
one_shot = true

[node name="quit_game_timer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "start"
anims/start = SubResource( 2 )

[node name="Label" type="Label" parent="."]
modulate = Color( 0.709804, 0.843137, 0.968627, 0 )
margin_left = 0.698334
margin_top = 144.0
margin_right = 1024.7
margin_bottom = 583.0
custom_fonts/font = SubResource( 3 )
text = "Connect  stars"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="end_score" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 511.216, 346.539 )
scale = Vector2( 0.5, 0.5 )

[node name="score" type="Label" parent="end_score"]
self_modulate = Color( 0.694118, 0.466667, 1, 1 )
margin_left = -459.948
margin_top = -215.505
margin_right = 490.052
margin_bottom = 232.493
rect_pivot_offset = Vector2( 484.698, 225.296 )
custom_fonts/font = SubResource( 4 )
text = "score : 100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="best_score" type="Node2D" parent="end_score/score"]
position = Vector2( -24.0629, -419.577 )

[node name="score2" type="Label" parent="end_score/score/best_score"]
modulate = Color( 0.960784, 1, 0.482353, 1 )
margin_left = 243.849
margin_top = 490.919
margin_right = 1193.85
margin_bottom = 938.917
rect_rotation = -11.6253
rect_scale = Vector2( 0.908286, 0.908286 )
rect_pivot_offset = Vector2( 484.698, 225.296 )
custom_fonts/font = SubResource( 5 )
text = "New Best score !"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="end_score/score/best_score"]
anims/oui = SubResource( 6 )

[node name="timer" type="Node2D" parent="."]
modulate = Color( 0.709804, 0.843137, 0.968627, 0 )
position = Vector2( 507.898, 69.7875 )

[node name="ui_button" type="Sprite" parent="timer"]
visible = false
position = Vector2( -2.60052, 2.96994 )
scale = Vector2( 0.708062, 1 )
texture = ExtResource( 3 )

[node name="time_left" type="Label" parent="timer"]
modulate = Color( 0.709804, 0.843137, 0.968627, 1 )
margin_left = -511.0
margin_top = -73.0
margin_right = 521.0
margin_bottom = 77.0
rect_pivot_offset = Vector2( 166.898, 51.794 )
custom_fonts/font = SubResource( 7 )
text = "5"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="timer"]
anims/time_pass = SubResource( 8 )

[node name="end_wave" type="Node2D" parent="."]

[node name="point_outilne" type="Sprite" parent="end_wave"]
modulate = Color( 0.372549, 0.223529, 0.639216, 0.254902 )
position = Vector2( 512, 300 )
scale = Vector2( 14, 14 )
texture = ExtResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 300 )
current = true
zoom = Vector2( 0.9, 0.9 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
autoplay = "begining"
anims/begining = SubResource( 9 )
anims/get = SubResource( 10 )

[node name="end" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0
pitch_scale = 0.1
[connection signal="timeout" from="begining_timer" to="." method="_on_begining_timer_timeout"]
[connection signal="timeout" from="end_timer" to="." method="_on_end_timer_timeout"]
[connection signal="timeout" from="quit_game_timer" to="." method="_on_quit_game_timer_timeout"]
